Fixed: the workouts are still getting cut off

--- a/src/components/BottomNav/BottomNav.scss
+++ b/src/components/BottomNav/BottomNav.scss
@@ -39,10 +39,11 @@
       &.helpful-links-item {
         span {
           color: #ffffff;
+
         }
 
         &:hover, &:focus{
-          border-color: transparent;
+          border-color: #bbbbbb;
         }
       }
 
