--- a/styles/custom.scss
+++ b/styles/custom.scss
@@ -303,7 +303,7 @@ LOGIN & PASSWORDS
 }
 
 .react-swipe-container {
-  height: 90vh;
+  //height: 90vh;
   & > div {
     height: 100%;
   }
