--- a/styles/rest-day.scss
+++ b/styles/rest-day.scss
@@ -4,6 +4,7 @@
   box-shadow: inset 0px 9px 14px -8px rgba(0,0,0,0.2);
   padding-top: 5vh;
   position: relative;
+  height: 90vh;
 
   .rest-day-container {
     padding-top: 40px;
